# campuscravings

./: .gitignore  PORT_CONFLICT_GUIDE.md  Procfile  README.md  check-users.js  database-setup.js  glitch-server.js  package-lock.json  package.json  railway.json  seed.js  server-mock.js  server.js  setup-db.js  simple-server.js  stop-servers.bat  stop-servers.ps1  test-db.js  test-owner-api.js
DB-Tutorial-Backend/DB-Tutorial-Backend/: checkReadMeImportant.txt  package-lock.json  package.json  server.js
backend/: .env.example  API_DOCS.md  CMakeLists.txt  README.md  database.cpp  database.h  main.cpp  package-lock.json  package.json  server.js
backend/middleware/: auth.js
backend/models/: Cart.js  MenuItem.js  Order.js  Truck.js  User.js
backend/routes/: auth.js  cart.js  menuItem.js  order.js  truck.js
connectors/: db.js  knex.js  mock-db.js
database/: schema.sql
frontend/: package-lock.json  package.json  vercel.json
frontend/css/: style.css
frontend/html/: admin.html  index.html  menu.html  vendor.html
frontend/js/: main.js
frontend/public/: 200.html  TRUCK_IMAGES_GUIDE.md  index.html
frontend/src/: App.js  (+1 more)
middleware/: auth.js
milestoneBackend/: package-lock.json  package.json  server.js
models/: FoodTruck.js  MenuItem.js  Order.js  User.js
routes/: auth.js  cart.js  menu.js  menuItem.js  order.js  orders.js  trucks.js
utils/: session.js
views/: addMenuItem.hjs  cart.hjs  customerHomepage.hjs  login.hjs  menuItems.hjs  myOrders.hjs  ownerDashboard.hjs  ownerMenuEdit.hjs  register.hjs  truckMenu.hjs  truckOrders.hjs  trucks.hjs
(+51 files in other folders)
